--- a/docs/Immortality & Cancer Module/5-0. HeLa Cultures and Contamination_The Intersection of Biology, Race, Class and Gender.md
+++ b/docs/Immortality & Cancer Module/5-0. HeLa Cultures and Contamination_The Intersection of Biology, Race, Class and Gender.md
@@ -9,13 +9,13 @@ title: "5. HeLa Cultures and Contamination: The Intersection of Biology, Race, C
 
 # Cell Culture and Cell Banks
 
-Today, thousands of cell lines have been established using refined methods of tissue culture. The first human cell lines, much like HeLa in 1951, were established by placing freshly removed human tissue in a growth medium containing animal cells, or human fetal cells. These “feeder” cells provide the newly transplanted cells with the appropriate growth factors and extracellular matrix (ECM) to establish the environmental conditions necessary to sustain growth for this new cell lineage, or cell line.o promote cell viability, cell lines must be incubated at the right temperature, humidity, and CO2 levels. The cell lines are maintained by human researchers who “split the cells” daily. Splitting involves washing the cells and reducing their numbers by distributing (splitting them up) them over numerous Petri dishes. This process of splitting removes waste, dead cells, excess cells, and old culture media and provides cells with fresh media containing growth factors and adequate space to ensure continued cell division (<mark style="background: #FFF3A3A6;">Slide 29: What is Cell Culture</mark>).
+Today, thousands of cell lines have been established using refined methods of tissue culture. The first human cell lines, much like HeLa in 1951, were established by placing freshly removed human tissue in a growth medium containing animal cells, or human fetal cells. These “feeder” cells provide the newly transplanted cells with the appropriate growth factors and extracellular matrix (ECM) to establish the environmental conditions necessary to sustain growth for this new cell lineage, or cell line.o promote cell viability, cell lines must be incubated at the right temperature, humidity, and CO2 levels. The cell lines are maintained by human researchers who “split the cells” daily. Splitting involves washing the cells and reducing their numbers by distributing (splitting them up) them over numerous Petri dishes. This process of splitting removes waste, dead cells, excess cells, and old culture media and provides cells with fresh media containing growth factors and adequate space to ensure continued cell division (<mark style="background: #FFF3A3A6;">[Slide 29: What is Cell Culture](http://stemcellcurriculum.org/slidesets.html)</mark>).
 
-Because researchers split the cells daily, great care must be taken to ensure a sterile environment. In order to limit contamination by cells either shed from the body of the person performing cell culture or present in the environment a tissue culture hood is used. The tissue culture hood uses air flow to pull air up and out away from the cultures, keeping the working environment sterile. Laboratories using human cell lines are designated as Biosafety level 2 (BSL2) and require special ventilation and air flow rates, as well as sterile biosafety cabinets and sterilizing equipment. Thus, human tissue culture experimentation is a costly endeavor, but one that can produce a wealth of knowledge and a range of biomedical products. Cells can be cultured short-term to serve as sites of experimentation for screening toxins and environmental chemicals, or for the development and testing of drugs and vaccines. They can also be used as biological factories to create humanized proteins for therapeutic outcomes. Cell lines can also be frozen at -80°C for long-term storage and thawed out when needed, allowing researchers to start and stop time with respect to the life of the cell line. A short video produced by EuroStemCell presents a “walk- through” of a cell culture lab, highlighting some of the most important aspects of cell culture. (<mark style="background: #ADCCFFA6;">Duguid, 2010</mark>)
+Because researchers split the cells daily, great care must be taken to ensure a sterile environment. In order to limit contamination by cells either shed from the body of the person performing cell culture or present in the environment a tissue culture hood is used. The tissue culture hood uses air flow to pull air up and out away from the cultures, keeping the working environment sterile. Laboratories using human cell lines are designated as Biosafety level 2 (BSL2) and require special ventilation and air flow rates, as well as sterile biosafety cabinets and sterilizing equipment. Thus, human tissue culture experimentation is a costly endeavor, but one that can produce a wealth of knowledge and a range of biomedical products. Cells can be cultured short-term to serve as sites of experimentation for screening toxins and environmental chemicals, or for the development and testing of drugs and vaccines. They can also be used as biological factories to create humanized proteins for therapeutic outcomes. Cell lines can also be frozen at -80°C for long-term storage and thawed out when needed, allowing researchers to start and stop time with respect to the life of the cell line. A short video produced by EuroStemCell presents a “walk- through” of a cell culture lab, highlighting some of the most important aspects of cell culture. (<mark style="background: #ADCCFFA6;">[Duguid, 2010](http://www.eurostemcell.org/stem-cell-videos-and-films#Cell)</mark>)
 
-<mark style="background: #FFF3A3A6;">Video: Duguid, C. 2010. Video: Cell Culture. EuroStemCell. (Producer Kate Doherty) (6 minutes). Link</mark>
+<mark style="background: #FFF3A3A6;">Video: Duguid, C. 2010. Video: Cell Culture. EuroStemCell. (Producer Kate Doherty) (6 minutes). [Link](http://www.eurostemcell.org/cell-culture)</mark>
 
-In the story of The Immortal Life of Henrietta Lacks, written by Rebecca Skloot, the notion that time can be frozen and a cell line resurrected is revisited throughout the narrative. Because cells can be thawed, placed in in the optimal growth conditions, and divide, it means that cell lines “live” past the typical human life span. In the case of the Lacks family, this caused some family members to pause and consider the spiritual and cultural ramifications of such manipulations (<mark style="background: #ADCCFFA6;">Skloot, 2010</mark>).
+In the story of The Immortal Life of Henrietta Lacks, written by Rebecca Skloot, the notion that time can be frozen and a cell line resurrected is revisited throughout the narrative. Because cells can be thawed, placed in in the optimal growth conditions, and divide, it means that cell lines “live” past the typical human life span. In the case of the Lacks family, this caused some family members to pause and consider the spiritual and cultural ramifications of such manipulations (<mark style="background: #ADCCFFA6;">[Skloot, 2010](http://rebeccaskloot.com/the-immortal-life/)</mark>).
 
 As the title of Cynthia Verspaget’s artwork suggests, such cells are exhibiting a type of “anarchy,” either refusing to stay connected to the individual from whom they originated or, perhaps, reaffirming this human connection. In this work, Verspaget fused her own cells with HeLa cells to create what she calls a new “artistic cell line.” Her work questions the notion of ownership and cell memory that can be rendered obsolete through laboratory manipulation, and poses philosophical questions regarding kinship and ontology (<mark style="background: #ADCCFFA6;">Verspaget, 2004</mark>). (<mark style="background: #FFF3A3A6;">Slide 41: Anarchy Cell Line</mark>). Helen Wilson-Roe seeks to redress this loss of familial connection through a collective work, “A Brush With Immortality,” in which she painted portraits of individual Lacks family members and exhibited these alongside photographs of HeLa cells caught in various stages of cell division (<mark style="background: #ADCCFFA6;">Wilson-Roe, 2013</mark>). Adele Senior, has written about other bioartists who have used HeLa cells and the narrative of their derivation to highlight the human connection, and RadioLab conducted an extra segment on the evening of the premiere of the film adaptation of Skloot’s book (<mark style="background: #ADCCFFA6;">Senior, 2011; Radiolab; Wolfe, 2017</mark>)
 
