PUSH NOTE : 7. What Policies Are in Place for Regulating Research with Human Subjects?.md

--- a/HeLa Cells & HPV Genes_Immortality & Cancer/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/HeLa Cells & HPV Genes_Immortality & Cancer/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -60,6 +60,8 @@ In the US, the 2010 Stem Cell Research Enhancement Act implemented a policy to i
 
 ## Patents and Laws
 
+<mark style="background: #FFF3A3A6;">change</mark>
+
 As the number and types of biobanks increase so, too, have the number of court rulings associated with biobanking, resulting in a significant impact on the diversity of, and public access to, banked human tissues and cells. Court cases can be divided into those addressing the patenting of banking processes and those that address banked products.
 
 In 2002, Pharmastem, a leader in cord blood banking, sought licensing fees from commercial umbilical cord banks using their collection, freezing, and storage technology. Ultimately, Pharmastem sued the commercial banks for patent infringement, threatening the livelihood of not only commercial cord blood banks but public cord blood banks as well. The cord blood banks argued that the technologies were ubiquitous in cell banking and thus, considered “prior art.” In 2009, the courts decided that the Pharmastem patents were invalid because the companies were not buying or selling cord blood, but simply providing a paid service to families interested in banking their newborn’s blood stem cells (<mark style="background: #ADCCFFA6;">Kurtzberg, J. et al. 2005</mark>).
