PUSH NOTE : 2. What Is A Cell? What is Cell Research?.md

--- a/HeLa Cells & HPV Genes_Immortality & Cancer/2. What Is A Cell? What is Cell Research?.md
+++ b/HeLa Cells & HPV Genes_Immortality & Cancer/2. What Is A Cell? What is Cell Research?.md
@@ -12,7 +12,7 @@ weight: 2
 Cells are defined as the smallest functional biological unit of all organisms, capable of autonomous replication and dynamic interaction with changing environments. They may exist as forms of independent life, as in the case of bacteria and other unicellular organisms, or be a subunit of multicellular organisms contributing to specialized functions that allow the organism to perform as a whole (*[Slides 12-19: History of Cell Biology](http://stemcellcurriculum.org/slidesets.html)*).
 
 <figure markdown style="float:right; width:20em;">
-  ![video_princeton.png](video_princeton.png)
+  ![[video_princeton.png|video_princeton.png]]
   <figcaption>Video: Princeton University. 2010. John Bonner's Dictystellum Movie. Youtube. Watch the video by clicking this <a href="https://youtu.be/bkVhLJLG7ug">link</a></figcaption>
 </figure>
 
@@ -30,7 +30,7 @@ A commonality to all cells is the chemical composition of carbon, nitrogen, oxyg
 
 
 <figure markdown style="width:15em;">
-  ![slide20.png](slide20.png)
+  ![[slide20.png|slide20.png]]
   <figcaption>Nunez, M. and Chamany, K. Macromolecules of cells are composed of repeating subunits and dynamic polymers, assembling and disassembling in response to environmental and intracellular signals.</figcaption>
 </figure>
 
@@ -43,20 +43,20 @@ Some proteins provide a structural role to the cell that is akin to our skeleton
 One of the most important aspects of cell biology is the role of the extracellular matrix (ECM), which is the material that surrounds cells in multicellular organisms. The ECM is a scaffold of structural proteins and sugar complexes that serves as a depot for extracellular signals such as growth factors. Cell behavior, structure, and organization are influenced by the composition and structure of the ECM, which varies among different tissues and organs. The ECM structure and composition can also be influenced by aging, trauma, and injury, all of which may halt or stimulate cell regeneration and specialization.
 
 <figure markdown style="width:30em;">
-  ![extracellular-matrix.png](extracellular-matrix.png)
+  ![[extracellular-matrix.png|extracellular-matrix.png]]
   <figcaption>Video: Singh, V. Sept 17, 2012. Extracellular Matrix. New York Times Channel. (4:23 min) <a href="http://www.nytimes.com/video/health/research/100000001773152/extracellular-matrix.html?action=click&contentCollection=health&module=embedded®ion=caption&pgtype=article">Link</a></figcaption>
 </figure>
 
 This specialization can lead to dramatically different cell structures, internal compositions, and organizations that retain the ability to respond to the environment dynamically and quickly. The 2011 International Science and Engineering Visualization Challenge People’s Choice 1st Prize in Video “[Rapid Visual Inventory & Comparison of Complex 3D Structures](https://www.youtube.com/watch?v=Dl1ufW3cj4g)” by Graham Johnson et al., illustrates how mouse pancreatic cells rapidly respond to sugar exposure by altering the synthesis and relative distribution of various organelles, which act as specialized sub structures within cells (*[Slide 22: Scale and Dynamics](http://stemcellcurriculum.org/slidesets.html)*).
 
 <figure markdown style="width:30em;">
-  <a href="https://www.youtube.com/watch?v=Dl1ufW3cj4g">![Johnson_complex 3D structure.png](Johnson_complex%203D%20structure.png)</a>
+  <a href="https://www.youtube.com/watch?v=Dl1ufW3cj4g">![[Johnson_complex 3D structure.png|Johnson_complex 3D structure.png]]</a>
   <figcaption>Video: Johnson, G. 2011. Rapid Visual Inventory & Comparison of Complex 3D Structures. <a href="https://www.youtube.com/watch?v=Dl1ufW3cj4g">Link</a></figcaption>
 </figure>
 
 
 <figure markdown style="float:left; width:20em;">
-  ![slide3.png](slide3.png)
+  ![[slide3.png|slide3.png]]
   <figcaption>Bioecological Model</figcaption>
 </figure>
 
