--- a/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
+++ b/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
@@ -17,7 +17,7 @@ Thus, an individual’s health is assessed using diagnostic tests that measure p
 Combining biomedical and social approaches to health aids in our understanding of disease, informs practices that prevent their occurrence, and addresses social discrimination associated with disability. Some of the earliest leaders of social medicine include Rudolph Virchow, an important figure in the history of cell biology, and Louis Pasteur, a pioneer in microbiology and communicable disease prevention ([Pridan, 1964](https://www.microbemagazine.org/index.php?option=com_content&view=article&id=2050:pasteurkoch-distinctive-ways-of-thinking-about-infectious-diseases&catid=502&Itemid=657); [Ullman, 2007](https://www.microbemagazine.org/index.php?option=com_content&view=article&id=2050:pasteurkoch-distinctive-ways-of-thinking-about-infectious-diseases&catid=502&Itemid=657)). Health policies associated with prevention of disease and disability include air pollution standards, laws regarding occupational workplace safety, guidelines for nutrition and exercise, and mass screenings using diagnostic medical tests.
 
 <figure markdown style="float:left; width:20em;">
-  ![slide3.png](slide3.png)
+  ![[slide3.png|slide3.png]]
   <figcaption>Bioecological Model</figcaption>
 </figure>
 
@@ -26,10 +26,10 @@ A socio-biomedical approach can also ameliorate the negative effects of living w
 The field of epigenetics bridges the medical and the social models of health by clarifying the molecular mechanisms involved in responding to the macro-scale environment in which we live ([Bronfenbrenner, 1979](http://books.google.com/books/about/THE_ECOLOGY_OF_HUMAN_DEVELOPMENT.html?id=OCmbzWka6xUC); [Kubicek & Tolpa Studios, 2011](http://images.the-scientist.com/content/images/articles/58007/epigenetics_primer.jpg); *[Slide 3: Bioecological Model](http://stemcellcurriculum.org/slidesets.html))*.
 
 <figure markdown style="float:right;width:20em;">
-  ![slide4.png](slide4.png)
+  ![[slide4.png|slide4.png]]
   <figcaption>Cell Signaling and Cell Fate</figcaption>
 </figure>
-%%[slide4.png](slide4.png)%%
+%%[[slide4.png|slide4.png]]%%
 Epigenetics also investigates local micro- environmental effects on cells, tissues, and organs, to determine which environmental signals are responsible for influencing cells to divide, differentiate, move, or die ([Powell, 2005](http://www.nature.com/nature/journal/v435/n7040/full/435268a.html)) (*[Slide 4: Cell Signaling and Cell Fate](http://stemcellcurriculum.org/slidesets.html)*).
 
 <mark style="background: #FF5582A6;">Infographic: Kubicek, S. 2011. Infographic: Epigenetics - A Primer. The Scientist. [Link](http://www.the-scientist.com/?articles.view/articleNo/29546/title/Infographic--Epigenetics---A-Primer/) **! (unable to see infographic)**</mark>
@@ -41,10 +41,10 @@ Examples of the vital role that environmental factors have in human development 
 
 <figure markdown style="width:30em;">
   <a href=http://www.nytimes.com/video/health/research/100000001773152/extracellular-matrix.html?action=click&contentCollection=health&module=embedded®ion=caption&pgtype=article> 
-  ![extracellular-matrix.png](extracellular-matrix.png)</a>
+  ![[extracellular-matrix.png|extracellular-matrix.png]]</a>
   <figcaption>Video: Singh, V. Sept 17, 2012. Extracellular Matrix. New York Times Channel. (4:23 min) <a href="http://www.nytimes.com/video/health/research/100000001773152/extracellular-matrix.html?action=click&contentCollection=health&module=embedded®ion=caption&pgtype=article">Link</a></figcaption>
 </figure>
-%%[extracellular-matrix.png](extracellular-matrix.png)%%
+%%[[extracellular-matrix.png|extracellular-matrix.png]]%%
 Additionally, living organisms have evolved to react to stress by reprogramming their DNA and changing their gene expression. Stressors can take the form of dehydration, malnutrition, or infection. Stress can also be the by-product of social interactions that make a person feel threatened, such as situations involving discrimination ([Radley et al., 2011](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3641164/); [Cossins, 2015](https://www.the-scientist.com/features/stress-fractures-36158); [Seppa, 2015](https://www.sciencenews.org/article/chronic-stress-can-wreak-havoc-body)).
 
 Slide Show. Chaddha, R. July 7, 2007. A Tale of Two Mice. NOVA PBS Slide Show. [Link](http://www.pbs.org/wgbh/nova/body/epigenetic-mice.html) <mark style="background: #FF5582A6;">**Don't see the actual audio slideshow**</mark>
@@ -58,10 +58,10 @@ Early studies in the 1950s sought to determine whether our genetic material or e
 Much of the early work on cancer was dependent on tissue samples and cell cultures established from clinical biopsies, collected without consent for research, thereby circumventing conversations about privacy, ownership, and compensation. In the post-WWII fervor to bring science into the open, attention was shifted from the Big Science Physics of the Manhattan Project to Big Science Biology supporting medical research.
 
 <figure markdown style="width:30em;">
-  ![Timeline10.png](Timeline10.png)
+  ![[Timeline10.png|Timeline10.png]]
   <figcaption><a href="http://www.stemcellcurriculum.org/timelines.html">Timeline10: Biomedical Research</a></figcaption>
 </figure>
-%%[Timeline10.png](Timeline10.png)%%
+%%[[Timeline10.png|Timeline10.png]]%%
 # This shift refocused society’s attention from external threats associated with wartime propaganda to threats located in our own bodies and genes.
 
 In the United States (US), the response was the publication of “Science The Endless Frontier” in 1945. The report, authored by Vannevar Bush, Director of the Office of Scientific Research and Development, equated scientific progress with social and economic development and proposed a national investment in biomedical research ([NSF,1945](http://www.nsf.gov/about/history/nsf50/vbush1945.jsp); [Crow, 2005](https://cspo.org/legacy/library/090729F3GD_lib_BushconferenceHi.pdf); [Cozzens, 2005](https://cspo.org/legacy/library/090729F3GD_lib_BushconferenceHi.pdf); [Pielke, 2010](http://sciencepolicy.colorado.edu/admin/publication_files/2010.24.pdf)).
@@ -71,7 +71,7 @@ In the United States (US), the response was the publication of “Science The En
 Riding the wave of success in the development of antibiotics and vaccines to address infectious diseases, a national pride emerged with many citizens seeing their contribution as part of the larger social good. Soon after Bush’s proposal was presented, the National Science Foundation (NSF) and the National Institutes of Health (NIH) alongside increased funding for biomedicine, led to developments in cell biology, immunology, and genetics, with the dual aim of maintaining a healthy workforce and creating marketable products. These developments were then touted in campaigns to stimulate public interest in continued investment and expansion of this emerging field. The success of the international smallpox vaccine campaign spurred other large-scale efforts. Around the same time that smallpox was eradicated, Mary Lasker, a philanthropist and activist for biomedical research, propelled the first large-scale studies to address cancer, what was then considered an epidemic without a cause.
 
 <figure markdown style="float:right; width:30em;">
-  <a href="http://www.retroreport.org/video/the-long-war-on-cancer/">![retroreport_nixon.png](retroreport_nixon.png)</a>
+  <a href="http://www.retroreport.org/video/the-long-war-on-cancer/">![[retroreport_nixon.png|retroreport_nixon.png]]</a>
   <figcaption>Video: Rosenbaum, J. Nov 4, 2013. The Long War on Cancer: From Nixon to Now. Retro Report.org (12:52min). <a href="http://www.retroreport.org/video/the-long-war-on-cancer/">Link</a></figcaption>
 </figure>
 
@@ -80,7 +80,7 @@ The “War on Cancer” and the National Sickle Cell Act announced by President 
 The investment in biomedical research was not the only consequence of WWII. War tribunals revealed that unethical medical research was conducted on individuals who were declared “unfit” in the name of science. These research subjects included orphans, those living with disabilities, prisoners, and, in the case of Nazi Germany, many ethnic groups considered impure.
 
 <figure markdown style="width:30em;">
-  ![Timeline0.png](Timeline0.png)
+  ![[Timeline0.png|Timeline0.png]]
   <figcaption><a href="http://www.stemcellcurriculum.org/timelines.html">Timeline0: History of Human Subjects Research</a></figcaption>
 </figure>
 
@@ -92,7 +92,7 @@ Some argue that this murky situation has led to the emergence of legitimized mar
 
 <figure markdown style="float:left; width:25em;">
   <a href=https://www.youtube.com/watch?v=_8RrX4hjCr0>
-   ![Ch1_benjamin_TEDx_new.png](Ch1_benjamin_TEDx_new.png)</a>
+   ![[Ch1_benjamin_TEDx_new.png|Ch1_benjamin_TEDx_new.png]]</a>
   <figcaption>Video: Benjamin, R. Feb 5, 2015. \n
   From park bench to lab bench.
   What kind of future are we designing? TEDxBaltimore. YouTube.(21:25 min)  <a href="https://www.youtube.com/watch?v=_8RrX4hjCr0">Link</a></figcaption>
@@ -102,7 +102,7 @@ Mark Greene, a bioethicist, returns to the principles of distributive and proced
 
 <figure markdown style="width:30em;">
   <a href=https://www.youtube.com/watch?v=LjnG1Kr_OFM>
-  ![goodwin.png](goodwin.png)</a>
+  ![[goodwin.png|goodwin.png]]</a>
   <figcaption>Video. Goodwin, M. 2011. Whose Values and Principles in a New Biopolitics. Tarrytown Meetings. YouTube. (10:48 min) <a href="https://www.youtube.com/watch?v=LjnG1Kr_OFM">Link</a></figcaption>
 </figure>
 
@@ -122,7 +122,7 @@ The collection of tissues and cells inevitably means that DNA is also collected,
 
 <figure markdown style="width:30em;">
   <a href=http://www.dailymotion.com/video/xykeuq_hela-cell-genome-published-causes-privacy-controversy_news>
-  ![Sparkman 2013.png](Sparkman%202013.png)</a>
+  ![[Sparkman 2013.png|Sparkman 2013.png]]</a>
   <figcaption>Video: Sparkman, S. 2013. The HeLa Cell Genome Published, Causes Privacy Controversy. Newsy. Dailymotion <a href="http://www.dailymotion.com/video/xykeuq_hela-cell-genome-published-causes-privacy-controversy_news">Link</a></figcaption>
 </figure>
 
@@ -132,11 +132,11 @@ Following publication of this genomic sequence, two researchers were able to ide
 
 <figure markdown style="float:left; width:20em;">
   <a href=http://www.dailymotion.com/video/x12uf1k_henrietta-lacks-family-finally-gets-say-in-genome-research_news>
-  ![Picht2013.png](Picht2013.png)</a>
+  ![[Picht2013.png|Picht2013.png]]</a>
   <figcaption>Video. Picht, M. Aug 7, 2013. Henrietta Lacks’ Family Finally Gets Say in Genome Research. Newsy Dailymotion. (2:47 min) <a href="http://www.dailymotion.com/video/x12uf1k_henrietta-lacks-family-finally-gets-say-in-genome-research_news">Link</a></figcaption>
 </figure>
 
-In line with this shift in shared responsibility to negotiate privacy, ownership, and compensation related to biospecimens, proposals to improve current regulations and practices regarding human subjects have emerged (See section on [What Policies Are in Place for Regulating Research with Human Subjects?](./7.%20What%20Policies%20Are%20in%20Place%20for%20Regulating%20Research%20with%20Human%20Subjects?.md)). The International Society for Stem Cell Research (ISSCR) Registry of Human Embryonic Stem Cell Lines Provenance and the US National Stem Cell Registry address the ethical provenance of stem cell lines excluding cell lines that are not in compliance with contemporary rules and guidelines regarding biospecimin procurement ([Knoppers & Isasai, 2010](http://genomemedicine.com/content/2/10/73); [Wadman, 2013](http://www.nature.com/news/medical-research-cell-division-1.13273)). The authors of Achieving Justice in Genomic Translation: Re-Thinking the Pathway to Benefit evoke a responsive justice framework to call on researchers to take greater responsibility in protecting subjects and communities, specifically addressing redistribution and recognition with respect to underserved communities ([Burke, et al. 2011](http://books.google.com/books?id=KA5pAgAAQBAJ&pg=PA10&lpg=PA10&dq=Achieving+Justice+in+Genomic+Translation:+Re-Thinking+the+Pathway+to+Benefit&source=bl&ots=nsmPJfElm6&sig=0NE2v3JeNNxjOpf6rqdBkp0JYL4&hl=en&sa=X&ei=A2vVUpe5KbO0sQTT-4D4CA&ved=0CEoQ6AEwBA#v=onepage&q=Achieving%2520Justice%2520in%2520Genomic%2520Translation%253A%2520Re-Thinking%2520the%2520Pathway%2520to%2520Benefit&f=false); page 3-20 in Google Books). Some of these approaches mimic the benefit-sharing models created by the biotechnology and pharmaceutical sectors to secure indigenous knowledge and bioresources that are mined for the development of novel drugs. However, few of these benefit-sharing models are seen as sustainable or just, as reviewed by Harry and Kanehe in their chapter “The B.S. in Access and Benefit Sharing” published by the Edmonds Institute and Corey Hayden’s book titled When Nature Goes Public ([Harry and Kanehe, 2005](http://www.ipcb.org/publications/other_art/bsinabs.html); [Hayden, 2003](http://press.princeton.edu/titles/7673.html)).
+In line with this shift in shared responsibility to negotiate privacy, ownership, and compensation related to biospecimens, proposals to improve current regulations and practices regarding human subjects have emerged (See section on [[7. What Policies Are in Place for Regulating Research with Human Subjects?|What Policies Are in Place for Regulating Research with Human Subjects?]]). The International Society for Stem Cell Research (ISSCR) Registry of Human Embryonic Stem Cell Lines Provenance and the US National Stem Cell Registry address the ethical provenance of stem cell lines excluding cell lines that are not in compliance with contemporary rules and guidelines regarding biospecimin procurement ([Knoppers & Isasai, 2010](http://genomemedicine.com/content/2/10/73); [Wadman, 2013](http://www.nature.com/news/medical-research-cell-division-1.13273)). The authors of Achieving Justice in Genomic Translation: Re-Thinking the Pathway to Benefit evoke a responsive justice framework to call on researchers to take greater responsibility in protecting subjects and communities, specifically addressing redistribution and recognition with respect to underserved communities ([Burke, et al. 2011](http://books.google.com/books?id=KA5pAgAAQBAJ&pg=PA10&lpg=PA10&dq=Achieving+Justice+in+Genomic+Translation:+Re-Thinking+the+Pathway+to+Benefit&source=bl&ots=nsmPJfElm6&sig=0NE2v3JeNNxjOpf6rqdBkp0JYL4&hl=en&sa=X&ei=A2vVUpe5KbO0sQTT-4D4CA&ved=0CEoQ6AEwBA#v=onepage&q=Achieving%2520Justice%2520in%2520Genomic%2520Translation%253A%2520Re-Thinking%2520the%2520Pathway%2520to%2520Benefit&f=false); page 3-20 in Google Books). Some of these approaches mimic the benefit-sharing models created by the biotechnology and pharmaceutical sectors to secure indigenous knowledge and bioresources that are mined for the development of novel drugs. However, few of these benefit-sharing models are seen as sustainable or just, as reviewed by Harry and Kanehe in their chapter “The B.S. in Access and Benefit Sharing” published by the Edmonds Institute and Corey Hayden’s book titled When Nature Goes Public ([Harry and Kanehe, 2005](http://www.ipcb.org/publications/other_art/bsinabs.html); [Hayden, 2003](http://press.princeton.edu/titles/7673.html)).
 
 Most of the criticism regarding benefit-sharing agreements arises from unequal power relations regarding memoranda of understanding (MOUs), because one party lacks the language and procedural knowledge to negotiate for benefits within a legal, biotechnological, or business framework. In the case of the HeLa cell line and the publication of genomic data, questions regarding compensation to the family were addressed by the Supreme Court case dismissing patents on naturally occurring genes, with the language being narrowly constrained around DNA sequences ([Zimmer, 2013](http://www.nytimes.com/2013/08/08/science/after-decades-of-research-henrietta-lacks-family-is-asked-for-consent.html); [Callaway, 2013b](http://www.nature.com/news/deal-done-over-hela-cell-line-1.13511); [Hudson and Collins, 2013](http://www.nature.com/nature/journal/v500/n7461/full/500141a.html?WT.ec_id=EMI_NATURE_1308_NATURENEWSBREAKING)). What was perhaps not made clear to the family is the ways in which this court decision leaves open the possibility of continued commercialization of products informed by these data as they could be based on RNA, chimeric proteins, or other inventions that are dependent on those DNA sequences but, remain patentable. It is also not entirely clear whether the HeLa genome would be considered something occurring in nature because genomic analyses reveal that the cell line has extensive chromosome shattering not seen in nature, but most likely induced by lab culture conditions ([Landry et al. 2013](http://www.g3journal.org/content/early/2013/03/11/g3.113.005777.abstract)).
 
@@ -151,7 +151,7 @@ Other resources that address health inequities in biomedical research and provid
 Although these are contemporary works, they follow an earlier definition of health proposed by Georges Canguilhem in his book The Normal and the Pathological ([Canguilhem, 1945](http://mitpress.mit.edu/books/normal-and-pathological)). Canguilhem recognized that health is dynamic and varies depending on the circumstances of the individual and community. He argued that health care requires a working relationship between health providers and individuals in which autonomy is in the hands of the individual. It follows that, if individuals are marginalized and excluded from processes that influence the direction and practices of biomedical research, this will have a negative impact on their circumstances. Lack of access to health care, stress associated with poverty, and discrimination based on ability, race, class, gender, and sexual orientation can all serve as environmental factors that remodel the biology of these individuals. Recent studies in the field of epigenetics suggest that, as a result of these environmental accosts, entire communities may live with elevated levels of chronic metabolic disease, cancer, and neurological pathology. ([Radley, et al., 2011](http://www.ncbi.nlm.nih.gov/pubmed/21597338); [Bollati, et al., 2010](http://www.ncbi.nlm.nih.gov/pubmed/21597338); [Oberlander, et al., 2008](http://www.ncbi.nlm.nih.gov/pubmed/21597338); [Thayer & Kuzawa, 2011](http://www.ncbi.nlm.nih.gov/pubmed/21597338); [Seppa, 2015](https://www.sciencenews.org/article/chronic-stress-can-wreak-havoc-body)).
 
 <figure markdown style="width:30em;">
-  <a href="https://www.youtube.com/watch?v=95ovIJ3dsNk&feature=youtu.be">![Harris_childhood trauma.png](Harris_childhood%20trauma.png)</a>
+  <a href="https://www.youtube.com/watch?v=95ovIJ3dsNk&feature=youtu.be">![[Harris_childhood trauma.png|Harris_childhood trauma.png]]</a>
   <figcaption>Video: Ted TALK: Burke Harris, N. Feb 17, 2015. How Childhood Trauma Affects Health Across a Lifetime. <a href="https://www.youtube.com/watch?v=95ovIJ3dsNk&feature=youtu.be">Link</a></figcaption>
 </figure>
 
@@ -160,13 +160,13 @@ It is precisely these states of disease and disability that the field of stem ce
 In the short presentation below, Elizabeth Yeampierre, of the community-based environmental justice non-profit UPROSE, emphasizes the need for researchers to be mindful of the health and environmental injustice that has its origins in colonization, oppression, and slavery. This presentation was one of many hosted by the NIH Workshop to Explore the Ethical, Legal, and Social Implications (ELSI) of Citizen Science, designed to inform the US Privacy and Trust Principles that accompany the changes to the Common Rule regulating the use of human research subjects and biospecimens.
 
 <figure markdown style="width:30em;">
-  <a href="https://www.youtube.com/watch?v=kCF6dIDcx0k">![Yeampierre.png](Yeampierre.png)</a>
+  <a href="https://www.youtube.com/watch?v=kCF6dIDcx0k">![[Yeampierre.png|Yeampierre.png]]</a>
   <figcaption>Video: Yeampierre, E. Session 2: Building the Relationship: Citizen and Community Engagement. NIH Workshop to Explore the Ethical, Legal, and Social Implications (ELSI) of Citizen Science. <a href="https://www.youtube.com/watch?v=kCF6dIDcx0k">Link (10:31min)</a></figcaption>
 </figure>
 
 
 %%___
 
-# [Next Section](1_Section%202.md) ![40](../docs/assets/turn-right.png){ width='25' }
+# [[1_Section 2|Next Section]] ![[turn-right.png|40]]{ width='25' }
 
 %%
