--- a/HeLa Cells & HPV Genes_Immortality & Cancer/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/HeLa Cells & HPV Genes_Immortality & Cancer/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -60,7 +60,10 @@ In the US, the 2010 Stem Cell Research Enhancement Act implemented a policy to i
 
 ## Patents and Laws
 
-<mark style="background: #FFF3A3A6;">change</mark>
+
+<mark style="background: #FF5582A6;">adslkjfasdklfjaklsd</mark>
+
+new text
 
 As the number and types of biobanks increase so, too, have the number of court rulings associated with biobanking, resulting in a significant impact on the diversity of, and public access to, banked human tissues and cells. Court cases can be divided into those addressing the patenting of banking processes and those that address banked products.
 
