PUSH NOTE : 10. "Altruistic" Donations for Profit or Unintended Use?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/10. "Altruistic" Donations for Profit or Unintended Use?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/10. "Altruistic" Donations for Profit or Unintended Use?.md
@@ -74,4 +74,6 @@ Perhaps most startling is that the industry push is coming from companies that p
 > [!quote] (<mark style="background: #ADCCFFA6;">[Pirnay et al., 2015, p 561](https://www.ncbi.nlm.nih.gov/pubmed/25851645)</mark>)
 > “In addition, some companies in the tissue engineering field cater to cosmetics rather than medical products. A striking example is the processing of human skin, the gold standard for the treatment of severe burns, into cosmetic products without medical indication, such as penis widening or lip enhancements, which fetch much higher prices than analogues for burn treatments. US burn centres were reportedly struggling to obtain skin because local tissue banks are committing all their donated skin to firms that market products for plastic and cosmetic surgery.”
 
+> Alternative quote block test
+
 Clearly, as technology and science advance so, too, will the ethical oversight regarding biospecimens and human subjects. Informed policy making will require an interdisciplinary approach that attempts to anticipate which communities and individuals are in need of protections, and how the right to health can be achieved in ways that promote scientific innovation as well as health and economic equity (<mark style="background: #ADCCFFA6;">[Arias et al., 2015](http://jlb.oxfordjournals.org/content/early/2015/10/29/jlb.lsv044.full)</mark>).
