PUSH NOTE : 10. "Altruistic" Donations for Profit or Unintended Use?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/10. "Altruistic" Donations for Profit or Unintended Use?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/10. "Altruistic" Donations for Profit or Unintended Use?.md
@@ -66,14 +66,10 @@ Originally, the Prolacta website was not forthcoming about its tactics, however,
 
 In addition to the commercialization of human fluids such as blood and breast milk, human tissues collected from cadavers for research and life saving treatments are in scarce supply due to demand emerging from pharmaceutical and regenerative medicine companies. As the case of Henrietta Lacks has revealed, people expect transparency with respect to how bodily tissues are going to be used. This is particularly true for those communities experiencing economic hardship, which ultimately leads to disproportionate health burdens.
 
-> [!quote] (<mark style="background: #ADCCFFA6;">[Pirnay et al., 2015, p559](https://www.ncbi.nlm.nih.gov/pubmed/25851645)</mark>)
-> “This situation has created tension between the altruistic principles of hospital tissue banks and industry’s profit-oriented principles. Meanwhile, industry lobbying and the political desire to promote the growth of biotechnology markets and jobs have led to increasingly business-oriented legislation controlling human tissue handling ... This shift has now gone so far that in some legislations, the risk arises that the interests of industry could take precedence over the interests of patients and research.” 
+> “This situation has created tension between the altruistic principles of hospital tissue banks and industry’s profit-oriented principles. Meanwhile, industry lobbying and the political desire to promote the growth of biotechnology markets and jobs have led to increasingly business-oriented legislation controlling human tissue handling ... This shift has now gone so far that in some legislations, the risk arises that the interests of industry could take precedence over the interests of patients and research.”  (<mark style="background: #ADCCFFA6;">[Pirnay et al., 2015, p559](https://www.ncbi.nlm.nih.gov/pubmed/25851645)</mark>)
 
 Perhaps most startling is that the industry push is coming from companies that provide resources for non- essential tissue transplants used in cosmetic surgery.
 
-> [!quote] (<mark style="background: #ADCCFFA6;">[Pirnay et al., 2015, p 561](https://www.ncbi.nlm.nih.gov/pubmed/25851645)</mark>)
-> “In addition, some companies in the tissue engineering field cater to cosmetics rather than medical products. A striking example is the processing of human skin, the gold standard for the treatment of severe burns, into cosmetic products without medical indication, such as penis widening or lip enhancements, which fetch much higher prices than analogues for burn treatments. US burn centres were reportedly struggling to obtain skin because local tissue banks are committing all their donated skin to firms that market products for plastic and cosmetic surgery.”
-
-> Alternative quote block test
+>  “In addition, some companies in the tissue engineering field cater to cosmetics rather than medical products. A striking example is the processing of human skin, the gold standard for the treatment of severe burns, into cosmetic products without medical indication, such as penis widening or lip enhancements, which fetch much higher prices than analogues for burn treatments. US burn centres were reportedly struggling to obtain skin because local tissue banks are committing all their donated skin to firms that market products for plastic and cosmetic surgery.” (<mark style="background: #ADCCFFA6;">[Pirnay et al., 2015, p 561](https://www.ncbi.nlm.nih.gov/pubmed/25851645)</mark>)
 
 Clearly, as technology and science advance so, too, will the ethical oversight regarding biospecimens and human subjects. Informed policy making will require an interdisciplinary approach that attempts to anticipate which communities and individuals are in need of protections, and how the right to health can be achieved in ways that promote scientific innovation as well as health and economic equity (<mark style="background: #ADCCFFA6;">[Arias et al., 2015](http://jlb.oxfordjournals.org/content/early/2015/10/29/jlb.lsv044.full)</mark>).
