PUSH NOTE : 3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
@@ -11,9 +11,28 @@ aliases:
 
 Cell culture techniques began in the 1800s, but the ability to keep a cell alive in culture was the accomplishment of Ross Harrison, who in 1907 cultured a nerve cell for several weeks using the “hanging drop method.” Over the next forty years a number of inventions and discoveries led to further advances in cell culture. Thomas Montrose Burrows discovered the medium of chicken embryo plasma clots as being essential for propagation of cells in culture, and coined the term “tissue culture,” Alexis Carrel was the first to establish sterile technique for cell purity, George Gey in 1933 was the first to invent the cell culture roller, which provided adequate air flow, and Wilton Earle in 1943 established the first continuously growing culture of mammalian cells, and later established the first clonal mouse immortalized cells, known as the L cell line ([Maienschein, 2005](http://www.amazon.com/Whose-View-Life-Embryos-Cloning/dp/0674017668)). (<mark style="background: #FFF3A3A6;">[Slide 27: Be Still My Beating Heart](http://stemcellcurriculum.org/slidesets.html)</mark>)
 
+![[PPT_s27@2x.png|PPT_s27@2x.png]]
+
+> [!info]- Beating Heart in a Dish
+In 1912, Alexis Carrel claimed that he was able to demonstrate the immortality of somatic differentiated cells in culture with his famous chick beating heart culture.  Having won the Nobel Prize for his work on suturing of blood vessels, Carrel created an in vitro environment in which he could pump fluid to a disembodied organ. He fed a chick beating heart culture with growth media for almost 40 by years, yet no one else could replicate his results. It was later discovered by Hayflick and Moorhead,  that in fact the cells were not immortal, but that most probably the culture media was either contaminated with viruses that transformed the heart cells into immortal cells, activating telomerase, or that he was continually supplying the culture with fresh stem cells as they reside in the chicken blood he was using for culture. Students may want to reflect on the scientific method and consider how  Carrel have conducted his experiment to eliminate any change of contamination- What was missing in his experimental design? Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
+> 
+> In 1938, Carrel is pictured on the cover of Time magazine f with Charles Lindbergh, first aviator to fly from New York to Paris without stopping, as the two mean shared a  fascination with immortality and pushing the bounds of human physiology. Lindbergh had a sister-in-law  ailing from heart failure.  It is important to note that many science fiction writers have used Carrel in his work to discuss dystopias about human futures. Journalist David M. Friedman wrote the book “ The Immortalists,” which details the two men’s fascination with immortality, but only for the right people. They were both eugenicists. Lindbergh was quoted as saying in his 1948 treatise “Of Flight and Life” 
+> 
+“We cannot escape the fact that our civilization was built, and still depends, upon the quality rather than the equality of men.” ( p35)
+> 
+> As late as 1969, he remained concerned that “after millions of years of successful evolution, human life is now deteriorating genetically,” warning in Life magazine that “we must contrive a new process of evolutionary selection” in order to survive. (Dunn, 2007). 
+> 
+>> [!question]- Question: How could Carrel have conducted his experiment to reveal this fatal flaw? What was missing in his experimental design? 
+> > Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
+
+
 A cell line is a collection of cells that can grow outside the body, while a cell strain is a clonal population of cells that arises from a single cell or small group of cells that have been propagated, or cultured, in a Petri dish. In the early days of “cell culture,” cell lines were heterogeneous, but as purification methods improved, the term “cell line” become synonymous with “cell strain.” As the lineage of cells in this culture can be traced back to the original single cell used to propagate the culture, the word “line” refers to this lineage and the clonal relationship of the cells, because they were generated through cell division from the original cell. Because the cells are growing outside of the body and in a Petri dish, we refer to any experiments done with these cells as being done in vitro, referring to the historic nature of cell culture using glass test tubes (vitrum is Latin for glass). Each cell line originates from living tissue or cells that grow in vivo, be they animal or human. Thus, each cell line represents the unique characteristics of that organism and that specific individual from which it originated ([NCBI, 2014](http://pubmedcommonsblog.ncbi.nlm.nih.gov/2014/05/16/spotlight-on-amanda-capes-davis-setting-the-cell-line-record-straight/)). (<mark style="background: #FFF3A3A6;">[Slide 28 & 29: ATTC](http://stemcellcurriculum.org/slidesets.html)</mark>)
 
-<mark style="background: #FFF3A3A6;">Video EuroStemCell. Cell Culture. [Link](http://www.eurostemcell.org/films) (6 min)]</mark>
+![[PPT_s28@2x.png|PPT_s28@2x.png]]
+
+![[2024-01-15 at 17.29.32@2x.png|2024-01-15 at 17.29.32@2x.png]]
+
+<mark style="background: #FFF3A3A6;">Video EuroStemCell. Cell Culture. [Link](https://www.eurostemcell.org/cell-culture) (6 min)]</mark>
 
 # Cell Transformation and Immortalization
 
@@ -25,11 +44,14 @@ Much of what we know about cell biology we have learned from the exceptional cas
 
 To better understand how cells in culture behave differently from cells in the body we can turn to human development, which includes all of the processes from fertilization to death. In humans, cells must grow and divide for the purposes of development, maintenance, and replenishment of tissues. Cells are endowed with genetic instructions for their own growth and division, which ensure that they proceed through this cycle in a controlled and timely fashion. The control, or regulation, of cell division is dependent on environmental cues that interact with cellular genes and proteins (<mark style="background: #FFF3A3A6;">[Slides 31-33: Cell Cycle and Check Points](http://stemcellcurriculum.org/slidesets.html)</mark>).
 
-<mark style="background: #FFF3A3A6;">Animation: Bohan, M.2005. Checkpoints and Cell Cycle Control. Harvard Molecular and Cell Biology-HHMI Outreach Program. [Link](https://lifesciencesoutreach.fas.harvard.edu/biology-cancer-animations)</mark>
+![[cell cycle_checkpts.gif|cell cycle_checkpts.gif]]
+
+<mark style="background: #FF5582A6;">Animation: Bohan, M.2005. Checkpoints and Cell Cycle Control. Harvard Molecular and Cell Biology-HHMI Outreach Program. [Link](https://lifesciencesoutreach.fas.harvard.edu/biology-cancer-animations)</mark>
+
 
 Cells in a developing embryo respond to growth factors in the mother’s reproductive tract and divide rapidly in the first few days after fertilization to produce the cells that will eventually become the fetus and placenta. Cells in the developing embryos are referred to as embryonic stem cells (ESCs) and those in the fetus as fetal stem cells. While cell division is rapid and uniform during embryogenesis, as the organism develops, cells become specialized for different functions. Once the organism is born, some cells stop dividing and maintain their specialized state, while others in the adult maintain the ability to undergo regulated cell division when an appropriate environmental signal is present (<mark style="background: #FFF3A3A6;">[Slide 5: Embryogenesis](http://stemcellcurriculum.org/slidesets.html)</mark>). These cells in the adult that maintain their ability to remain less specialized are referred to as adult stem cells (ASCs).
 
-<mark style="background: #FFF3A3A6;">Animation/Tutorial. University of Michigan. 2005. Stem Cells Explained: An Interactive Tutorial. [Link](http://www.stemcellresearch.umich.edu/overview/tutorial.html)</mark>
+<mark style="background: #FF5582A6;">Animation/Tutorial. University of Michigan. 2005. Stem Cells Explained: An Interactive Tutorial. [Link](http://www.stemcellresearch.umich.edu/overview/tutorial.html)</mark>
 
 Adult cells that are constantly exposed to environmental damage, such as those in our skin, gut, and hair follicles, reside in stem cell niches that provide environmental cues to signal ASCs to either remain quiescent, or undergo cell division and regenerate aging and damaged tissues (<mark style="background: #FFF3A3A6;">[Slide 34: Cells Communicate and Coordinate](http://stemcellcurriculum.org/slidesets.html)</mark>). Similarly, some areas of the body possess cells that can respond to environmental trauma signals and undergo cell division as part of wound healing. Exploring the environmental and genetic interplay in these stem cell niches is the focus of stem cell research, which may help us understand how our bodies regenerate, age, and heal. Similarly, understanding how niches become disrupted, leading to rapid and uncontrolled cell division, can help us understand how cancers develop ([Powell, 2005](http://stemcellcurriculum.org/slidesets.html)) (<mark style="background: #FFF3A3A6;">[Slide 35: Microenvironments and Stem Cell Niches](http://stemcellcurriculum.org/slidesets.html)</mark>).
 
